# py_dictflat

./: .gitignore  Makefile  pyproject.toml
doc/: 01_basic_usages.md  02_nested_dictionnaries.md  03_generate_ids.md  04_change_values.md  05_drop_fields.md  06_rename_fields.md  07_lists.md  08_squash_dictionnaries.md  09_simple_keys.md
src/dictflat/: __init__.py  dictflat.py  dicttools.py
tests/test_dictflat/: common_fct_test.py  test_dictflat_00_base.py  test_dictflat_01_nested.py  test_dictflat_02_fct_id.py  test_dictflat_03_change.py  test_dictflat_04_drop.py  test_dictflat_05_rename.py  test_dictflat_06_rename_all.py  test_dictflat_15_list_dict.py  test_dictflat_16_list_no_dict.py  test_dictflat_20_dict_of_dict.py  test_dictflat_21_dict_of_dict_all.py  test_dictflat_30_nested_simple_key.py  test_dictflat_30_nested_simple_keys.py
tests/test_dicttools/: test_extract_list.py  test_get_dict.py  test_get_nested_value.py  test_set_nested_value.py  test_simple_flat.py
